# generic-chinese-water-quality-sensor

./: pyproject.toml  readme.md
_docs/img/: stock-img.avif
src/: basic.py
